# ret2boot

./: AGENTS.md  Cargo.toml  README.md  rustfmt.toml  taplo.toml
.github/workflows/: release.yml
src/: checksum.rs  cli.rs  config.rs  errors.rs  l10n.rs  main.rs  privilege.rs  resources.rs  startup.rs  telemetry.rs  terminal.rs  ui.rs  update.rs
src/install/: mod.rs
src/install/collectors/: confirm.rs  input.rs  mod.rs  multi_select.rs  secret.rs  single_select.rs
src/install/steps/: cluster.rs  context.rs  gateway.rs  helm.rs  mod.rs  platform.rs  preflight.rs  support.rs
src/resources/locales/: en-us.yml  ja-jp.yml  zh-hans.yml  zh-hant.yml
src/resources/templates/: install.env.example
src/resources/templates/k8s/: platform-bootstrap.yaml.tmpl
src/resources/templates/nginx/: ret2shell-stream.conf.tmpl  ret2shell.conf.tmpl
